# Flask-OpenAPI

./: .gitattributes  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-issue.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build_release.yml  cd.yml  ci.yml
ci/: .coveragerc  .flake8rc  .mypyrc  .pylintrc  codescan.sh  new_version.sh  requirements.txt  setup_worker.sh  test.sh
ci/config/: .coveragerc  .flake8rc  .pylintrc  .pytestrc  requirements.txt
ci/scripts/: build.sh  build_local.sh  codescan.sh  get_path.sh  increment_version.py  new_version.sh  setup_worker.sh  test_runner.sh
ci/tests/: conftest.py  test_apispecs.py  test_base.py  test_commands.py  test_suite.py  test_utils.py
ci/tests/suite/: test_apispec.py  test_apispec_uiversion3.py  test_base_model_view.py  test_basic_auth.py  test_callbacks.py  test_colors.py  test_colors_external_js.py  test_colors_from_specdict.py  test_colors_template_json.py  test_colors_template_yaml.py  test_colors_uiversion2.py  test_colors_with_schema.py  test_custom_validation_function.py  test_decorator_package.py  test_decorators_in_init_app.py  test_definition_object_test.py  test_disable_swagger_ui.py  test_example_app.py  test_example_blueprint.py  test_get_schema.py  test_lazy_string.py  test_marshmallow_apispec.py  test_multiple_specs_dropdown_example.py  test_no_routes.py  test_openapi3_examples.py  test_parse_openapi3.py  test_parse_openapi3_json.py  test_parsed_view_func.py  test_refs.py  test_request_body.py  test_restful.py  test_specs_route_example.py  test_swag_annotation.py  test_swag_from_merging.py  test_swag_from_overriding.py  test_swagger_config_2.py  test_swagger_config_3.py  test_swagger_config_3_with_components_schemas.py  test_swagger_config_merge.py  test_top_level_vendor_extension.py  (+3 more)
flask_openapi/: __init__.py  base.py  marshmallow_apispec.py  utils.py
flask_openapi/utils/: auth.py
src/flask_openapi/: __init__.py  base.py  commands.py  constants.py  core.py  marshmallow_apispec.py  openapi.py  utils.py
src/flask_openapi/compat/: marshmallow.py
src/flask_openapi/core/: commands.py  decorators.py  marshmallow_apispec.py  parser.py  specs.py  validation.py  views.py
src/flask_openapi/openapi/: file.py  parsers.py  specs.py  validator.py  version.py
src/flask_openapi/utils/: __init__.py  constants.py  decorator.py  decorators.py  encoder.py  files.py  flask.py  (+6 more)
tests/: conftest.py  test_utils.py
(+24 files in other folders)
