[metadata]
name = Flask-OpenAPI3-UI
version = attr: flask_openapi.__version__
url = https://github.com/overflowdigital/Flask-OpenAPI/
license = MIT
author = Overflow Digital
author_email = team@overflow.digital
description = Next generation OpenAPI v3 Integration for Flask based APIs. Based on Flasgger.
long_description = file: README.md, LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
platforms = any
py_modules = flask_openapi
install_requires =
    Flask
    PyYAML
    jsonschema
    mistune
    six
packages = find:
package_dir = flask_openapi

[options.packages.find]
where = flask_openapi

[options.package_data]
ui2 = /**/*
ui3 = /**/*

[options.entry_points]
flask.commands = 
    generate-api-schema=flask_openapi.commands:generate_api_schema
